--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -1,9 +1,3 @@
-body {
-    background-color: #121212;
-    color: white;
-    margin: 0;
-}
-
 .nav {
     background-color: #7f3bb3;
     display: flex;
@@ -32,6 +26,7 @@ body {
     display: flex;
     align-items: center;
     padding: .25em;
+    border-radius: 0.5em;
 }
 
 .nav li.active {
@@ -39,5 +34,37 @@ body {
 }
 
 .nav li:hover {
+    background-color: #8e51bc;
+}
+
+.container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    margin-left: 2rem;
+    margin-right: 2rem;
+}
+
+footer {
+    background-color: #7f3bb3;
+    padding-bottom: 0;
+    margin-top: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+}
+
+footer .top-footer-container {
+    margin-top: 1em;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+footer .bottom-footer-container {
+    display: block;
+    justify-content: center;
     background-color: #8e51bc;
 }
