--- a/src/css/layout.css
+++ b/src/css/layout.css
@@ -11,6 +11,10 @@
     font-size: 3em;
 }
 
+.nav-site-title:hover {
+    text-decoration: underline;
+}
+
 .nav ul {
     margin: 0;
     padding: 0;
@@ -20,6 +24,16 @@
 }
 
 .nav a {
+    color: inherit;
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    padding: .25em;
+    border-radius: 0.5em;
+}
+
+.nav Link {
     color: inherit;
     text-decoration: none;
     height: 100%;
